--- a/css/Bootstrapmade4.css
+++ b/css/Bootstrapmade4.css
@@ -509,7 +509,9 @@ ul li:hover .main{
     font-weight: 300;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+.plants1 p{
+    margin: 0px;
+}
 .icon1 i{
     font-size: 50px;
 }
@@ -525,13 +527,15 @@ ul li:hover .main{
 .plants2{
     height: 80px;
     width: 500px;
-    /* background-color: aqua; */
-    
+    /* background-color: aqua; */    
 }
 .plants2 h3{
     color: white;
     font-weight: 300;
     font-family: Arial, Helvetica, sans-serif;
+}
+.plants2 p{
+    margin: 0px;
 }
 .icon2 i{
     font-size: 50px;
@@ -546,6 +550,9 @@ ul li:hover .main{
     color: white;
     font-weight: 300;
     font-family: Arial, Helvetica, sans-serif;
+}
+.plants3 p{
+    margin: 0px;
 }
 .flex6{
     display: flex;
@@ -586,6 +593,7 @@ ul li:hover .main{
     margin-left: 20px;
     margin-bottom: 30px;
 }
+
 .partt1 p{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 300px;
@@ -657,37 +665,38 @@ button{
     display: flex;
 }
 .boxx1{
-    height: 300px;
+    height: 230px;
     width: 350px;
     background-color: antiquewhite;
-    margin-top: 50px;
+    margin-top: 130px;
     margin-left: 50px;
     background-image: url("https://bootstrapmade.com/content/demo/AgriCulture/assets/img/img_sq_8.jpg");
     background-size: 100% 100%;
     padding-bottom: 100px;
+    
 }
 .boxx2{
-    height: 300px;
+    height: 230px;
     width: 350px;
     background-color: antiquewhite;
-    margin-top: 50px;
+    margin-top: 130px;
     margin-left: 50px;
     background-image: url("https://bootstrapmade.com/content/demo/AgriCulture/assets/img/img_sq_3.jpg");
     background-size: 100% 100%;
     padding-bottom: 100px;
 }
 .boxx3{
-    height: 300px;
+    height: 230px;
     width: 350px;
     background-color: antiquewhite;
-    margin-top: 50px;
+    margin-top: 130px;
     margin-left: 50px;
     background-image: url("https://bootstrapmade.com/content/demo/AgriCulture/assets/img/img_sq_6.jpg");
     background-size: 100% 100%;
     padding-bottom: 100px;
 }
 .sub1{
-    height: 900px;
+    height: 800px;
     width: 100%;
     /* background-color: aqua; */
     margin-top: 100px;
@@ -706,9 +715,10 @@ button{
 }
 .container6{
    width: 1140px;
-   height: 770px;
+   height: 660px;
    /* background-color: antiquewhite; */
    margin: auto;
+   margin-top: 10px;
 }
 .flex9{
     display: flex;
@@ -716,10 +726,170 @@ button{
 .parttt1{
     width: 50%;
     height: 770px;
-    background-color: rgb(138, 104, 60);
+    /* background-color: rgb(138, 104, 60); */
+}
+.photobox1{
+    height: 100px;
+    width: 100px;
+    /* background-color: #34bf49; */
+    margin-top: 70px;
+    margin-left: 30px;
+}
+.photobox2{
+    height: 100px;
+    width: 100px;
+    /* background-color: #34bf49; */
+    margin-top: 70px;
+    margin-left: 30px;
+}
+.photobox3{
+    height: 100px;
+    width: 100px;
+    /* background-color: #34bf49; */
+    margin-top: 70px;
+    margin-left: 30px;
+}
+.photobox4{
+    height: 100px;
+    width: 100px;
+    /* background-color: #34bf49; */
+    margin-top: 70px;
+    margin-left: 30px;
+}
+.parttt1 img{
+    border-radius: 50%;
+    height: 100px;
+}
+.parttt1 p{
+    color: rgb(20, 20, 10);
+    padding: 0px;
+    padding-left: 20px;
+    padding-top: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 300;
+    padding-right: 90px;
+}
+.parttt1 h2{
+    color: green;
+    padding: 0px;
+    padding-left: 20px;
+    padding-top: 10px;
 }
 .parttt2{
     width: 50%;
     height: 770px;
-    background-color: rgb(213, 185, 148);
+    /* background-color: rgb(213, 185, 148); */
+}
+.parttt2 img{
+    border-radius: 50%;
+    height: 100px;
+}
+.parttt2 p{
+    color: rgb(20, 20, 10);
+    padding: 0px;
+    padding-left: 20px;
+    padding-top: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 300;
+    padding-right: 90px;
+}
+.parttt2 h2{
+    color: green;
+    padding: 0px;
+    padding-left: 20px;
+    padding-top: 10px;
+}
+.selector{
+    height: 670px;
+    width: 100%;
+    background-color: antiquewhite;
+}
+.pp1{
+    width: 100%;
+    height: 200px;
+    /* background-color: aqua; */
+}
+.pp1 h2{
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 300;
+    font-style: oblique;
+    margin-left: 570px;
+    padding-top: 50px;
+}
+.pp1 h1{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 300;
+    margin-left: 400px;
+    padding-top: 30px;
+}
+.cards{
+    width: 100%;
+    height: 505px;
+    /* background-color: aquamarine; */
+    margin-top: 20px;
+}
+.container7{
+    width: 1140px;
+    height: 505px;
+    margin: auto;
+    /* background-color: rgb(189, 189, 93); */
+}
+.flex10{
+    height: 500px;
+    display: flex;
+    column-gap: 16px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.boxxx1{
+    height: 430px;
+    width: calc(33.33% - 10px);
+    background-color: white;
+
+}
+.card1{
+    height: 250px;
+    width: 100%;
+    background-color: aqua;
+    background-image: url("https://images.unsplash.com/photo-1693283115721-777835cd3684?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-size: 100% 100%;
+}
+.boxxx1 h2{
+    padding: 0px;
+    margin: 0px;
+}
+
+.card2{
+    height: 250px;
+    width: 100%;
+    background-color: aqua;
+    background-image: url("https://as2.ftcdn.net/v2/jpg/10/12/08/95/1000_F_1012089591_FpksnpgeEqNd3jglPtyWhaJd4mUiWLrd.jpg");
+    background-size: 100% 100%;
+}
+.boxxx2 h2{
+    padding: 0px;
+    margin: 0px;
+}
+
+.boxxx2{
+    height: 430px;
+    width: calc(33.33% - 10px);
+    background-color: white;
+}
+.boxxx3{
+    height: 430px;
+    width: calc(33.33% - 10px);
+    background-color: white;
+ 
+}
+.card3{
+    height: 250px;
+    width: 100%;
+    background-color: aqua;
+    background-image: url("https://as1.ftcdn.net/v2/jpg/10/96/30/46/1000_F_1096304687_JWvgKvD4tNjB8FFqdtFrdNFuErrH8DRr.jpg");
+    background-size: 100% 100%;
+}
+.boxxx3 h2{
+    padding: 0px;
+    margin: 0px;
 }
