--- a/css/Bootstrapmade4.css
+++ b/css/Bootstrapmade4.css
@@ -802,7 +802,7 @@ button{
 .selector{
     height: 670px;
     width: 100%;
-    background-color: antiquewhite;
+    background-color: rgba(216, 213, 213,0.21);
 }
 .pp1{
     width: 100%;
@@ -857,8 +857,63 @@ button{
 .boxxx1 h2{
     padding: 0px;
     margin: 0px;
+    font-style: normal;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding-top: 15px;
+    padding-left: 10px;
+}
+.name{
+    width: 100%;
+    height: 50px;
+    /* background-color: #416946; */ 
+}
+.flex11{
+    display: flex;
+    
+}
+.flex11 i{
+    padding-left: 15px;
+    padding-top: 15px;
+    font-size: 20px;
+    padding-right: 10px;
+}
+.flex11 p{
+    padding-top: 15px;
+    color: gainsboro;
+    font-size: 18px;
+}
+.hr{
+    width: 70%;
+    border: 0.3px solid rgba(216, 213, 213,0.21);
+    margin-left: 50px;
+    margin-top: 10px;
+}
+.read{
+    height: 62px;
+    width: 100%;
+    /* background-color: #34bf49; */
+}
+.read p{
+    margin-left: 25px;
+    margin-top: 20px;
+    font-size: 20px;
+}
+.read p i{
+    margin-left: 10px;
 }
 
+
+
+
+
+
+
+
+.boxxx2{
+    height: 430px;
+    width: calc(33.33% - 10px);
+    background-color: white;
+}
 .card2{
     height: 250px;
     width: 100%;
@@ -869,13 +924,59 @@ button{
 .boxxx2 h2{
     padding: 0px;
     margin: 0px;
+    font-style: normal;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding-top: 15px;
+    padding-left: 10px;
+}
+.name1{
+    width: 100%;
+    height: 50px;
+    /* background-color: #416946; */ 
+}
+.flex12{
+    display: flex;
+    
+}
+.flex12 i{
+    padding-left: 15px;
+    padding-top: 15px;
+    font-size: 20px;
+    padding-right: 10px;
+}
+.flex12 p{
+    padding-top: 15px;
+    color: gainsboro;
+    font-size: 18px;
+}
+.hr1{
+    width: 70%;
+    border: 0.3px solid rgba(216, 213, 213,0.21);
+    margin-left: 50px;
+    margin-top: 10px;
+}
+.read1{
+    height: 62px;
+    width: 100%;
+    /* background-color: #34bf49; */
+}
+.read1 p{
+    margin-left: 25px;
+    margin-top: 20px;
+    font-size: 20px;
+}
+.read1 p i{
+    margin-left: 10px;
 }
 
-.boxxx2{
-    height: 430px;
-    width: calc(33.33% - 10px);
-    background-color: white;
-}
+
+
+
+
+
+
+
+
 .boxxx3{
     height: 430px;
     width: calc(33.33% - 10px);
@@ -892,4 +993,54 @@ button{
 .boxxx3 h2{
     padding: 0px;
     margin: 0px;
+    font-style: normal;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding-top: 15px;
+    padding-left: 10px;
+}
+.name2{
+    width: 100%;
+    height: 50px;
+    /* background-color: #416946; */ 
+}
+.flex13{
+    display: flex;
+    
+}
+.flex13 i{
+    padding-left: 15px;
+    padding-top: 15px;
+    font-size: 20px;
+    padding-right: 10px;
+}
+.flex13 p{
+    padding-top: 15px;
+    color: gainsboro;
+    font-size: 18px;
+}
+.hr2{
+    width: 70%;
+    border: 0.3px solid rgba(216, 213, 213,0.21);
+    margin-left: 50px;
+    margin-top: 10px;
+}
+.read2{
+    height: 62px;
+    width: 100%;
+    /* background-color: #34bf49; */
+}
+.read2 p{
+    margin-left: 25px;
+    margin-top: 20px;
+    font-size: 20px;
+}
+.read2 p i{
+    margin-left: 10px;
+}
+
+.check{
+    width: 100%;
+    height: 300px;
+    background-color: rgba(55, 182, 41, 0.21);
+   
 }
