--- a/css/Margin&Padding.css
+++ b/css/Margin&Padding.css
@@ -1,10 +1,9 @@
 h1{
     width: 300px;
     height: 150px;
-    background-color: aqua;
+    background-color: rgb(255, 136, 0);
     text-align: center;
     line-height: 150px;
-
     /* margin-top: 50px ;
     margin-bottom: 50px;
     margin-left: 50px;
