--- a/css/Project.css
+++ b/css/Project.css
@@ -276,7 +276,7 @@ span::before{
     background-image: url('https://www.cdmi.in/courses@1x/_0042_blender-training-institute.webp');
 }
 .bg6{
-    background-image: url('../pic/download\ \(4\).jpg');
+    background-image: url('../demo/download\ \(3\).jpg');
 } 
 
 .superclass{
