--- a/css/Bootstrapmade4.css
+++ b/css/Bootstrapmade4.css
@@ -40,7 +40,7 @@
 .w-80 ul li a{
     text-decoration: none;
     color: rgb(21, 14, 14);
-    font-family: "Marcellus", sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 10px;
     margin: 10px;
 }
@@ -292,12 +292,15 @@ ul li:hover .main{
     font-family: "Marcellus", sans-serif;
     padding-left: 10px;
     padding-top: 0px;
+    
+  
 }
 .name1{
     /* color: green; */
     font-family: "Marcellus", sans-serif;
     padding-left: 10px;
     padding-top: 0px;
+
 }
 .name2{
     /* color: green; */
@@ -350,6 +353,7 @@ ul li:hover .main{
 }
 .contant1 p{
     font-family: "Marcellus", sans-serif;
+
 }
 .contant2{
     width: 250px;
@@ -1041,6 +1045,41 @@ button{
 .check{
     width: 100%;
     height: 300px;
-    background-color: rgba(55, 182, 41, 0.21);
+    background-color: rgba(216, 213, 213,0.21);
    
+}
+
+
+.container8{
+    width: 1140px;
+    height: 300px;
+    margin: auto;
+    /* background-color: aqua; */
+}
+.flex14{
+    display: flex;
+}
+.a1{
+    height: 300px;
+    width: 50%;
+    /* background-color: blueviolet; */
+}
+.a1 h2{
+    padding-top: 100px;
+    padding-left: 50px;
+    padding-bottom: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 30px;
+}
+.a1 p{
+    padding-left: 50px;
+    padding-right: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: gainsboro;
+    font-size: 17px;
+}
+.a2{
+    height: 300px;
+    width: 50%;
+    background-color: rgb(144, 109, 176);
 }
