--- a/css/Bootstrapmade4.css
+++ b/css/Bootstrapmade4.css
@@ -1,6 +1,8 @@
 *{
     padding: 0px;
     margin: 0px;
+    text-decoration: none;
+    list-style: none;
 }
 .w-100{
     height: 100px;
@@ -232,7 +234,7 @@ ul li:hover .main{
 .photo1{
     width: 150px;
     height: 120px;
-    background-color: yellow;
+    /* background-color: yellow; */
     background-image: url("https://media.gettyimages.com/id/1807493051/vector/nature-friendly-sketchy-doodle-vector-line-icon-with-editable-stroke-the-icon-is-suitable.jpg?s=612x612&w=0&k=20&c=SsbBEOAUNOIZRr7LF0EUGEHG6RWCciOmkaka1ONVMro=");
     background-size: 100%  100%;
 }
@@ -292,16 +294,8 @@ ul li:hover .main{
     font-family: "Marcellus", sans-serif;
     padding-left: 10px;
     padding-top: 0px;
-    
-  
 }
-.name1{
-    /* color: green; */
-    font-family: "Marcellus", sans-serif;
-    padding-left: 10px;
-    padding-top: 0px;
 
-}
 .name2{
     /* color: green; */
     font-family: "Marcellus", sans-serif;
@@ -347,7 +341,7 @@ ul li:hover .main{
 .contant1{
     width: 250px;
     height: 70px;
-    /* background-color: aqua; */
+   
     padding-left: 10px;
     padding-top: 5px;
 }
@@ -358,7 +352,7 @@ ul li:hover .main{
 .contant2{
     width: 250px;
     height: 70px;
-    /* background-color: aqua; */
+
     padding-left: 10px;
     padding-top: 5px;
 }
@@ -933,11 +927,7 @@ button{
     padding-top: 15px;
     padding-left: 10px;
 }
-.name1{
-    width: 100%;
-    height: 50px;
-    /* background-color: #416946; */ 
-}
+
 .flex12{
     display: flex;
     
@@ -1002,11 +992,8 @@ button{
     padding-top: 15px;
     padding-left: 10px;
 }
-.name2{
-    width: 100%;
-    height: 50px;
-    /* background-color: #416946; */ 
-}
+
+
 .flex13{
     display: flex;
     
@@ -1078,8 +1065,200 @@ button{
     color: gainsboro;
     font-size: 17px;
 }
+.flex15{
+    display: flex;
+   
+}
 .a2{
     height: 300px;
     width: 50%;
-    background-color: rgb(144, 109, 176);
+    /* background-color: gainsboro; */
+}
+ .ww-100{
+    width: 100%;
+    height: 70px;
+    /* background-color: aqua; */
+    margin-top: 100px;
+} 
+.flex15{
+    display: flex;
+}
+.inputClass{
+    width: 70%;
+    height: 70px;
+    /* background-color: antiquewhite; */
+    border: 1px solid#416946;
+}
+.inputClass input{
+    height: 65px;
+    width: 99%;
+    
+}
+.pp2{
+    width: 30%;
+    height: 70px;
+    background-color: green;
+} 
+.pp2 p{
+    
+    text-align: center;
+    line-height: 70px;
+    font-size: 30px;
+}
+.pp2 p:hover{
+    background-color: white;
+    color: white;
+}
+.last{
+    width: 100%;
+    height: 500px;
+    background-color: black;
+}
+.container9{
+    height: 500px;
+    width: 1140px;
+    margin: auto;
+    /* background-color: antiquewhite; */
+}
+.flex16{
+    display: flex;
+}
+.b1{
+    width: 40%;
+    height: 500px;
+    /* background-color: yellow; */
+}
+.b1 h5{
+    padding-top: 50px;
+    padding-left: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    color: white;
+}
+.q1{
+    width: 100%;
+    height: 70px;
+    /* background-color: #416946; */
+    margin-top: 30px;
+  
+}
+.q1 p{
+    color: white;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 200px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+}
+.q2{
+    width: 100%;
+    height: 70px;
+    /* background-color: #416946; */
+    margin-top: 5px;
+}
+.q2 p{
+    color: white;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 150px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+}
+.q3{
+    width: 100%;
+    height: 70px;
+    /* background-color: #416946; */
+    margin-top: 70px;
+}
+.q3 p{
+    color: white;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 50px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+}
+.b2{
+    width: 20%;
+    height: 500px;
+    background-color: rgb(161, 199, 90);
+}
+.b2 h5{
+    padding-top: 50px;
+    padding-left: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    color: white;
+    position: relative;
+    padding-bottom: 30px;
+}
+
+
+h5::after{
+    content: "";
+    width: 27px;
+    height: 2px;
+    background-color: green;
+    position: absolute;
+    top: 78px;
+    left: 22px;   
+}
+.b2 ul{
+    list-style: none;
+    text-decoration: n;
+}
+.b2 ul li{
+    padding-bottom: 10px;
+}
+.b2 ul li a{
+    color: gainsboro;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 20px;
+   
+}
+
+
+
+
+
+.b3{
+    width: 20%;
+    height: 500px;
+    background-color: rgb(126, 123, 181);
+}
+.b3 h5{
+    padding-top: 50px;
+    padding-left: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    color: white;
+    position: relative;
+}
+
+.b4{
+    width: 20%;
+    height: 500px;
+    background-color: rgb(197, 124, 175);
+}
+.b4 h5{
+    padding-top: 50px;
+    padding-left: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    color: white;
+    position: relative;
+}
+.b5{
+    width: 20%;
+    height: 500px;
+    background-color: yellow;
+}
+.b5 h5{
+    padding-top: 50px;
+    padding-left: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    color: white;
+    position: relative;
 }
