--- a/css/Before-After(Text).css
+++ b/css/Before-After(Text).css
@@ -4,20 +4,16 @@ span{
     margin-left: 60px;
 }
 span::after{
-    content: "\f50d";
+    content: "";
     width: 12px;
     height: 1px;
     background-color: rgb(163, 99, 99);
     position: absolute;
     top: 8px;
     left: -15px;
-    font-family: "Font Awesome 6 Brands";
 }
 span::before{
     content: "\f50d";
-    width: 12px;
-    height: 1.5px;
-    background-color: brown;
     position: absolute;
     top: 9px;
     left: 37px;
