--- a/css/MegaMenu.css
+++ b/css/MegaMenu.css
@@ -28,18 +28,21 @@ ul li a:hover{
     color: blue;
     background-color: aquamarine;
 }
-
-
 ul ul {
     display: none;
 }
-
 ul ul li{
     float: none;
+    position: relative;
 }
 ul ul li a{
     background-color: chartreuse;
 }
-ul li:hover ul{
+ul li:hover > ul{
     display: block;
+}
+ul ul ul{
+    position: absolute;
+    left: 100%;
+    top: 100px;
 }
